fix: spacing between head messages

--- a/src/components/TextChannel/Message/index.module.scss
+++ b/src/components/TextChannel/Message/index.module.scss
@@ -2,15 +2,16 @@
 	margin-top: 6px;
 }
 
+.messageHead {
+	margin-top: 6px;
+}
+
 .messageContainer {
 	display: flex;
 	padding: 2px 16px;
 	position: relative;
 	gap: 12px;
 
-	&.messageHead {
-		margin-top: 6px;
-	}
 
 	&:hover {
 		background-color: var(--hover);
